--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -10,7 +10,7 @@ sbohints [-h | -v]
 .P
 sbohints [-l | --reset]
 .P
-sbohints [-c] [-b | -o | -O | -r] sbo_name (sbo_name)
+sbohints [-c] [-Obor] sbo_name (sbo_name)
 .P
 sbohints [-q] sbo_name (sbo_name)
 .SH DESCRIPTION
@@ -74,6 +74,13 @@ flags. If an invalid configuration is detected in
 .I
 /etc/sbotools/sbotools.conf\fR\
 \&, the script exits with a diagnostic message.
+To use a configuration directory other than
+.I
+/etc/sbotools\fR\
+\&, export an environment variable
+.B
+SBOTOOLS_CONF_DIR
+with an absolute path.
 .SH OPTIONS
 .P
 .B
