--- a/man5/sbotools.hints.5
+++ b/man5/sbotools.hints.5
@@ -77,6 +77,13 @@ entry.
 .B
 sbohints(1)
 can also be used to interface with this file.
+To use a configuration directory other than
+.I
+/etc/sbotools\fR\
+\&, export an environment variable
+.B
+SBOTOOLS_CONF_DIR
+with an absolute path.
 .SH SEE ALSO
 .P
 sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5)
