--- a/man3/SBO::Lib::Build.3
+++ b/man3/SBO::Lib::Build.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Build 3"
-.TH SBO::Lib::Build 3 "Pungenday, Confusion 12, 3191 YOLD" "" "sbotools 3.6"
+.TH SBO::Lib::Build 3 "Prickle-Prickle, Confusion 13, 3191 YOLD" "" "sbotools 3.6"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -286,7 +286,7 @@ when a build fails.
 \&\f(CWrationalize_queue()\fR takes a build queue and rearranges it such that
 no script appears before any of its dependencies. Currently, this is only
 useful when an automatic reverse dependency rebuild has been triggered or
-in case of a mass rebuild. The rearranged queue is returned.
+in case of a mass or series rebuild. The rearranged queue is returned.
 .SS revert_slackbuild
 .IX Subsection "revert_slackbuild"
 .Vb 1
