--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -11,7 +11,7 @@ tree for a given name or names
 .P
 sbofind [-h|-v]
 .P
-sbofind [-AERTetiqr] search_term (search_term)
+sbofind [-AERTeiqrt] search_term (search_term)
 .SH DESCRIPTION
 .P
 .B
