--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -212,7 +212,17 @@ If set to an
 .B
 absolute path\fR\
 \&, save build logs here. Logs are saved with the name of the script
-and a timestamp.
+and a timestamp. Please note that because
+.B
+STDERR
+must be redirected for a complete log, colors and formatting may differ
+when running some SlackBuilds unless
+.B
+LOG_DIR
+is
+.B
+FALSE\fR\
+\&.
 .RE
 .P
 .B
