--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -201,6 +201,13 @@ Show help information.
 .RS
 Show version information.
 .RE
+.SH SBOTEST
+.B
+sbohints
+is called when running
+.B
+sbotest --hints\fR\
+\&; flags are unchanged.
 .SH EXIT CODES
 .P
 .B
