--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Prickle-Prickle, Confusion 13, 3191 YOLD" "" "sbotools 3.6"
+.TH SBO::Lib::Util 3 "Sweetmorn, Confusion 20, 3191 YOLD" "" "sbotools 3.6"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -105,7 +105,7 @@ optional script dependencies and automatic revese dependency rebuild requests.
 .ie n .SS $is_sbotest
 .el .SS \f(CW$is_sbotest\fP
 .IX Subsection "$is_sbotest"
-This shared and unexportable variable indicates a run from \f(CW\*(C`sbotest\*(C'\fR.
+This shared variable indicates a run from \f(CW\*(C`sbotest\*(C'\fR.
 .ie n .SS $sbotest_compatible
 .el .SS \f(CW$sbotest_compatible\fP
 .IX Subsection "$sbotest_compatible"
