Fix sbotest references in man1.

--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -476,7 +476,7 @@ effect on scripts in the local overrides directory.
 sboconfig
 is called when running
 .B
-sbotest --config\fR\
+sbotest config\fR\
 \&; the following default values change in this situation:
 .P
 .B
