--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -206,7 +206,7 @@ Show version information.
 sbohints
 is called when running
 .B
-sbotest --hints\fR\
+sbotest hints\fR\
 \&; flags are unchanged.
 .SH EXIT CODES
 .P
